fix two most annoying remaining bugs (incorrect hover in chats and overflowing avatars in interactors section)

--- a/src/components/chat_list_item/chat_list_item.scss
+++ b/src/components/chat_list_item/chat_list_item.scss
@@ -9,10 +9,6 @@
     outline: none;
   }
 
-  &:hover {
-    box-shadow: var(--shadow);
-  }
-
   .chat-list-item-left {
     margin-right: 1em;
   }
