--- a/src/components/status/status.scss
+++ b/src/components/status/status.scss
@@ -347,6 +347,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    overflow: hidden;
 
     &::before {
       content: "";
